--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  example:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Simple Step
+      - run: echo here is a simple step
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
